--- a/.env
+++ b/.env
@@ -14,6 +14,7 @@ DB_PORT=3306
 DB_DATABASE=cinema
 DB_USERNAME=root
 DB_PASSWORD='fGcYyHPbq'
+DATA_SOURCE = 'json'
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
